--- a/src/WebApp/Views/Home/Privacy.cshtml
+++ b/src/WebApp/Views/Home/Privacy.cshtml
@@ -5,4 +5,8 @@
 <div class="prose">
     <h1>@ViewData["Title"]</h1>
     <p>Use this page to detail your site's privacy policy.</p>
+    <p>New para 3.</p>
+    <ul>
+        <li>Test</li>
+    </ul>
 </div>
