--- a/src/WebApp/Views/Shared/_Layout.cshtml
+++ b/src/WebApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     @RenderBody()
 </div>
 <div role="contentinfo" class="mx-4 mt-12 mb-4">
-    <h2 data-controller="example"></h2>
+    <h2 class="font-bold tracking-tight text-xl" data-controller="example"></h2>
     <p>&copy; @DateTime.Now.Year - WebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
 </div>
 </body>
