--- a/src/WebApp/Views/Home/Privacy.cshtml
+++ b/src/WebApp/Views/Home/Privacy.cshtml
@@ -5,8 +5,10 @@
 <div class="prose">
     <h1>@ViewData["Title"]</h1>
     <p>Use this page to detail your site's privacy policy.</p>
-    <p>New para 3.</p>
+    <h2>A cool list</h2>
     <ul>
+        <li>The first item</li>
         <li>Test</li>
+        <li>Testing some more</li>
     </ul>
 </div>
