--- a/src/WebApp/Views/Home/Privacy.cshtml
+++ b/src/WebApp/Views/Home/Privacy.cshtml
@@ -10,5 +10,7 @@
         <li>The first item</li>
         <li>Test</li>
         <li>Testing some more</li>
+        <li>Fourth</li>
+        <li>Fifth</li>
     </ul>
 </div>
