--- a/src/styles.css
+++ b/src/styles.css
@@ -61,4 +61,8 @@
 	@apply underline text-gray-900 font-medium hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
 }
 
+.turbo-progress-bar {
+	@apply h-2 bg-green-200;
+}
+
 @tailwind utilities;
