Change to get minified JS in dev.

--- a/src/WebApp/Views/Home/Privacy.cshtml
+++ b/src/WebApp/Views/Home/Privacy.cshtml
@@ -5,7 +5,7 @@
 <div class="prose">
     <h1>@ViewData["Title"]</h1>
     <p>Use this page to detail your site's privacy policy.</p>
-    <h2>A cool list</h2>
+    <h2>A cool list:</h2>
     <ul>
         <li>The first item</li>
         <li>Test</li>
