--- a/src/styles.css
+++ b/src/styles.css
@@ -29,40 +29,42 @@
 
 @tailwind components;
 
-.iframe-wrapper {
-	position: relative;
-	overflow: hidden;
-	padding-top: 56.25%;
-}
+@layer components {
+	.iframe-wrapper {
+		position: relative;
+		overflow: hidden;
+		padding-top: 56.25%;
+	}
 
-.iframe-wrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border: 0;
-}
+	.iframe-wrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border: 0;
+	}
 
-.table-wrapper {
-	max-width: 100%;
-	overflow-x: auto;
-}
+	.table-wrapper {
+		max-width: 100%;
+		overflow-x: auto;
+	}
 
-.prose a {
-	@apply hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
-}
+	.prose a {
+		@apply hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
+	}
 
-.prose pre.prettyprint {
-	@apply text-xs;
-}
+	.prose pre.prettyprint {
+		@apply text-xs;
+	}
 
-.link-primary {
-	@apply underline text-gray-900 font-medium hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
-}
+	.link-primary {
+		@apply underline text-gray-900 font-medium hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
+	}
 
-.turbo-progress-bar {
-	@apply h-2 bg-green-200;
+	.turbo-progress-bar {
+		@apply h-2 bg-green-200;
+	}
 }
 
 @tailwind utilities;
