--- a/src/styles.css
+++ b/src/styles.css
@@ -16,15 +16,6 @@
 		font-named-instance: 'Italic';
 		src: url('inter-italic-var.woff2') format('woff2');
 	}
-
-	@font-face {
-		font-family: 'JetBrains Mono';
-		font-weight: 100 900;
-		font-display: swap;
-		font-style: normal;
-		font-named-instance: 'Regular';
-		src: url('jetbrainsmono-regular.woff2') format('woff2');
-	}
 }
 
 @tailwind base;
@@ -32,36 +23,8 @@
 @tailwind components;
 
 @layer components {
-	.iframe-wrapper {
-		position: relative;
-		overflow: hidden;
-		padding-top: 56.25%;
-	}
-
-	.iframe-wrapper iframe {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		border: 0;
-	}
-
-	.table-wrapper {
-		max-width: 100%;
-		overflow-x: auto;
-	}
-
-	.prose a {
-		@apply hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
-	}
-
-	.prose pre.prettyprint {
-		@apply text-xs;
-	}
-
-	.link-primary {
-		@apply underline text-gray-900 font-medium hover:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
+	.prose a, .link-primary {
+		@apply underline text-blue-600 hover:bg-yellow-200 hover:text-gray-900 hover:no-underline hover:outline-none focus:bg-yellow-200 focus:text-gray-900 focus:no-underline focus:outline-none;
 	}
 
 	.turbo-progress-bar {
