--- a/src/WebApp/Pages/Shared/_Root.cshtml
+++ b/src/WebApp/Pages/Shared/_Root.cshtml
@@ -18,6 +18,8 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/ico" />
     <link href="/dist/styles.css" rel="stylesheet" asp-append-version="true" data-turbo-track="reload" />
     <script src="/dist/main.js" async asp-append-version="true" data-turbo-track="reload"></script>
+
+    <meta name="description" content="Sample page of using Razor Pages and Hotwired.dev stuff.">
 </head>
 <body class="h-full">
 @RenderBody()
