--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -9,12 +9,21 @@
 
 <p class="mt-5">A simple Razor Pages app showing how to use some features from Turbo and Stimulus.</p>
 
+<p class="mt-5">
+    <a href="https://github.com/krompaco/hotwired-aspnet" class="inline-flex items-center link-primary">
+        <svg class="flex-none mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
+        <span class="flex-none">
+            Source code on GitHub
+        </span>
+    </a>
+</p>
+
 <div class="mt-10 bg-white rounded shadow p-4">
     <h2 class="font-semibold tracking-tight text-xl">Very simple Stimulus example controller test</h2>
     <div class="mt-2">
         <p data-controller="example">Original content from server response.</p>
     </div>
-    <p class="mt-2 text-sm">I recommend learning more here: <a class="link-primary" href="https://github.com/excid3/tailwindcss-stimulus-components"><em class="font-bold not-italic">Tailwind CSS Stimulus Components</em> by excid3 on GitHub</a></p>
+    <p class="mt-2">I recommend learning more here: <a class="link-primary" href="https://github.com/excid3/tailwindcss-stimulus-components"><em class="font-bold not-italic">Tailwind CSS Stimulus Components</em> by excid3 on GitHub</a></p>
 </div>
 
 <div class="mt-10 bg-white rounded shadow p-4">
@@ -22,7 +31,7 @@
     <div class="mt-2">
         <div id="stream-test">Original content from server response.</div>
     </div>
-    <p class="mt-2 text-sm"><a class="link-primary" asp-page="StreamTest" target="_blank"><em class="font-bold not-italic">Stream test page</em> that will update text (open in new window)</a></p>
+    <p class="mt-2"><a class="link-primary" asp-page="StreamTest" target="_blank"><em class="font-bold not-italic">Stream test page</em> that will update text (open in new window)</a></p>
 </div>
 
 <div class="mt-10 bg-white rounded shadow p-4">
@@ -34,14 +43,20 @@
             @* Accessibility-wise it's most likely better to just HTML required attributes on the inputs but I want to have a sample of model validation in here too *@
             @await Html.PartialAsync("Partials/Forms/ValidationSummary")
 
-            <form asp-page="Index" method="post" class="space-y-2 mt-2">
-                <label class="block" asp-for="IndexForm.Name"></label>
-                <input asp-for="IndexForm.Name" type="text">
+            <form asp-page="Index" method="post" class="space-y-6 mt-4">
+                <div>
+                    <label class="block" asp-for="IndexForm.Name"></label>
+                    <input class="mt-2" asp-for="IndexForm.Name" type="text">
+                </div>
 
-                <label class="block" asp-for="IndexForm.Company"></label>
-                <input asp-for="IndexForm.Company" type="text">
+                <div>
+                    <label class="block" asp-for="IndexForm.Company"></label>
+                    <input class="mt-2" asp-for="IndexForm.Company" type="text">
+                </div>
 
-                <button type="submit" class="block link-primary text-sm">Submit form</button>
+                <div>
+                    <button type="submit" class="button-primary">Submit form</button>
+                </div>
             </form>
         }
 
@@ -49,7 +64,7 @@
         {
             <h3 class="mt-2">Hi @(Model.TempStoredForm.Name?.Trim()) from @(Model.TempStoredForm.Company?.Trim())!</h3>
 
-            <p class="mt-2"><a href="/" class="link-primary text-sm">Enter new data</a></p>
+            <p class="mt-2"><a href="/" class="link-primary">Enter new data</a></p>
         }
     </turbo-frame>
 </div>
