--- a/src/WebApp/Pages/StreamTest.cshtml
+++ b/src/WebApp/Pages/StreamTest.cshtml
@@ -5,4 +5,4 @@
 
 <h1 class="font-semibold tracking-tight text-3xl">Web socket message sent</h1>
 
-<p class="mt-5">Sent at @DateTime.Now.ToString("T") from this page.</p>
+<p class="mt-5">Sent at @DateTime.Now.ToString("T") from this page. Reload page to send a new message.</p>
