--- a/src/WebApp/Pages/Shared/_Root.cshtml
+++ b/src/WebApp/Pages/Shared/_Root.cshtml
@@ -2,7 +2,10 @@
 <html lang="en" class="h-full bg-gray-100">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="/dist/inter-var-latin.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">
+
     <title>@ViewData["Title"]</title>
 
     @if (this.Context?.Items["csp-nonce"] != null)
@@ -15,8 +18,8 @@
         <meta name="csrf-param" content="@this.Context?.Items["csrf-param"]">
     }
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/ico" />
-    <link href="/dist/styles.css" rel="stylesheet" asp-append-version="true" data-turbo-track="reload" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
+    <link href="/dist/styles.css" rel="stylesheet" asp-append-version="true" data-turbo-track="reload">
     <script src="/dist/main.js" async asp-append-version="true" data-turbo-track="reload"></script>
 
     <meta name="description" content="Sample page of using Razor Pages and Hotwired.dev stuff.">
