--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,12 @@
 @layer base {
+	/* https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap */
 	@font-face {
 		font-family: 'Inter var';
 		font-weight: 100 900;
 		font-display: swap;
 		font-style: normal;
-		font-named-instance: 'Regular';
-		src: url('inter-roman-var.woff2') format('woff2');
-	}
-
-	@font-face {
-		font-family: 'Inter var';
-		font-weight: 100 900;
-		font-display: swap;
-		font-style: italic;
-		font-named-instance: 'Italic';
-		src: url('inter-italic-var.woff2') format('woff2');
+		src: url('inter-var-latin.woff2') format('woff2');
+		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 	}
 }
 
