--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -66,6 +66,11 @@
         {
             <h3 class="mt-2 text-green-700">Hi <em class="font-bold not-italic">@(Model.TempStoredForm.Name?.Trim())</em> from <em class="font-bold not-italic">@(Model.TempStoredForm.Company?.Trim())</em>!</h3>
 
+            if (this.ViewContext.HttpContext.Request.IsTurbo())
+            {
+                @Html.Raw(Alert.GetHtml($"Hi {Model.TempStoredForm.Name?.Trim()} from {Model.TempStoredForm.Company?.Trim()}", AlertType.Information))
+            }
+
             <p class="mt-2"><a href="/?action=new" class="link-primary">Enter new data</a></p>
         }
     </turbo-frame>
