--- a/src/WebApp/Pages/_ViewImports.cshtml
+++ b/src/WebApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using WebApp
+﻿@using Krompaco.HotwiredAspNet.Extensions
+@using WebApp
+@using WebApp.Models
+@using WebApp.Pages.Shared.Partials.Interaction
 @namespace WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
