--- a/src/WebApp/Pages/Shared/Components/ValidationSummary/ValidationSummaryViewComponent.cshtml
+++ b/src/WebApp/Pages/Shared/Components/ValidationSummary/ValidationSummaryViewComponent.cshtml
@@ -1,4 +1,5 @@
-﻿@model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
+﻿@using Krompaco.AspNetCore.Hotwired.Extensions
+@model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
 
 @{
     if (this.Model == null)
