--- a/src/WebApp/Pages/_ViewImports.cshtml
+++ b/src/WebApp/Pages/_ViewImports.cshtml
@@ -1,5 +1,4 @@
-﻿@using Krompaco.HotwiredAspNet.Extensions
-@using WebApp
+﻿@using WebApp
 @using WebApp.Models
 @namespace WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
