--- a/src/WebApp/Shared/ValidationSummary.razor
+++ b/src/WebApp/Shared/ValidationSummary.razor
@@ -1,4 +1,4 @@
-﻿@using Krompaco.AspNetCore.Hotwired.Extensions
+﻿@*@using Krompaco.AspNetCore.Hotwired.Extensions
 @model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
 
 @{
@@ -47,3 +47,4 @@
         </div>
     }
 }
+*@
