Remove unnecessary files. Add text/html and no cache headers if not present. Make app run. Still WIP.

--- a/src/WebApp/Pages/PlayerForm.razor
+++ b/src/WebApp/Pages/PlayerForm.razor
@@ -1,10 +1,6 @@
-﻿@*@page "{id:guid}"
-@model PlayerFormPageModel
+﻿@page "/playerform/{id:guid}"
 
-@{
-    this.Layout = "_Root";
-    ViewData["Title"] = "Player form page";
-}*@
+<PageTitle>Player Form</PageTitle>
 
 <turbo-frame id="js-player-form" aria-live="polite">
     <div class="pointer-events-none fixed inset-0 flex items-end px-1 py-5 sm:items-start sm:p-5">
@@ -34,7 +30,7 @@
                             </form>
                         </div>
                         <div class="ml-4 flex flex-shrink-0">
-                            <a asp-page="PlayerFormEmpty" class="inline-flex rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                            <a href="/playerformempty" class="inline-flex rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
                                 <span class="sr-only">Close</span>
                                 <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z"/>
@@ -47,3 +43,29 @@
         </div>
     </div>
 </turbo-frame>
+
+@code {
+    ////[BindProperty(SupportsGet = true)]
+    ////public Guid Id { get; set; }
+
+    ////[BindProperty]
+    ////public PlayerFormModel PlayerFormModel { get; set; }
+
+    ////public void OnGet()
+    ////{
+    ////    this.logger.LogInformation("Hello from OnGet() " + this.Id.ToString("D"));
+
+    ////    var all = this.TempData.GetPlayers();
+    ////    var match = all.SingleOrDefault(x => x.Id == this.Id);
+
+    ////    if (match == null)
+    ////    {
+    ////        this.PlayerFormModel.Id = Guid.NewGuid();
+    ////        return;
+    ////    }
+
+    ////    this.PlayerFormModel.Id = match.Id;
+    ////    this.PlayerFormModel.Name = match.Name;
+    ////    this.PlayerFormModel.Ranking = match.Ranking;
+    ////}
+}
