--- a/src/WebApp/Shared/MainLayout.razor
+++ b/src/WebApp/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/inter-vr-latin.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">
+    <link href="/dist/inter-var-latin.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">
 
     @*@if (this.Context.Items["csp-nonce"] != null)
     {
@@ -18,8 +18,8 @@
     }*@
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
-    <link href="/dist/styles.css" rel="stylesheet" asp-append-version="true" data-turbo-track="reload">
-    <script src="/dist/main.js" async asp-append-version="true" data-turbo-track="reload" suppress-error="BL9992"></script>
+    <link href="/dist/styles.css" rel="stylesheet" data-turbo-track="reload">
+    <script src="/dist/main.js" async data-turbo-track="reload" suppress-error="BL9992"></script>
 
     <meta name="description" content="Sample page of using Blazor United SSR, SignalR and Hotwired.dev stuff.">
 
