--- a/src/WebApp/Shared/PlayerListItem.razor
+++ b/src/WebApp/Shared/PlayerListItem.razor
@@ -1,6 +1,4 @@
-﻿@model PlayerFormModel
-
-<h2 class="font-extrabold inline">
+﻿@*<h2 class="font-extrabold inline">
     @Model.Name <span class="font-medium text-gray-600">#@Model.Ranking</span>
 </h2>
 
@@ -13,3 +11,4 @@
         <button class="link-primary" type="submit">Delete</button>
     </form>
 </div>
+*@
