--- a/src/WebApp/Pages/Index.razor
+++ b/src/WebApp/Pages/Index.razor
@@ -18,7 +18,7 @@
 
     <div class="mt-10 bg-white rounded shadow p-4">
         <h2 class="font-semibold tracking-tight text-xl">Turbo Streams and Frames showcase: Player Database</h2>
-        <p class="mt-2">A <a class="link-primary" asp-page="PlayerList"><em class="font-bold not-italic">separate page</em> showing some capabilities</a> and a smooth way of using View Components to keep markup DRY.</p>
+        <p class="mt-2">A <a class="link-primary" href="/playerlist"><em class="font-bold not-italic">separate page</em> showing some capabilities</a> and a smooth way of using View Components to keep markup DRY.</p>
     </div>
 
     <div class="mt-10 bg-white rounded shadow p-4">
@@ -34,7 +34,7 @@
 
         <p class="mt-2">This form responds with a SignalR global message.</p>
 
-        <turbo-frame id="js-global-message-form" aria-live="polite" src="/GlobalMessageForm" loading="lazy">
+        <turbo-frame id="js-global-message-form" aria-live="polite" src="/globalmessageform" loading="lazy">
             <Spinner />
         </turbo-frame>
     </div>
@@ -48,7 +48,7 @@
             @if (this.TempStoredForm == null)
             {
                 @* Accessibility-wise it's most likely better to just set HTML required attributes on the inputs but I want to have a sample of model validation in here too *@
-                @await Component.InvokeAsync("ValidationSummary", this.Model)
+                @*@await Component.InvokeAsync("ValidationSummary", this.Model)*@
 
                 <form asp-page="Index" method="post" class="space-y-6 mt-4">
                     <div>
@@ -71,10 +71,10 @@
             {
                 <h3 class="mt-2 text-green-700 text-lg">Hi <em class="font-bold not-italic">@(this.TempStoredForm.Name?.Trim())</em> from <em class="font-bold not-italic">@(this.TempStoredForm.Company?.Trim())</em>!</h3>
 
-                if (this.ViewContext.HttpContext.Request.IsTurbo())
+                @*if (this.ViewContext.HttpContext.Request.IsTurbo())
                 {
                     @await Component.InvokeAsync("Alert", new Alert($"Hi {Model.TempStoredForm.Name?.Trim()} from {Model.TempStoredForm.Company?.Trim()}", AlertType.Information))
-                }
+                }*@
 
                 <p class="mt-2"><a href="/?action=new" class="link-primary">Enter new data</a></p>
             }
@@ -84,9 +84,9 @@
     <div class="mt-10 bg-white rounded shadow p-4">
         <h2 class="font-semibold tracking-tight text-xl">Turbo frame in other page test</h2>
 
-        <p class="mt-2">This form responds with Turbo Frame content from a <a class="link-primary" asp-page="TurboFrameExample">Turbo frame in other page</a>.</p>
+        <p class="mt-2">This form responds with Turbo Frame content from a <a class="link-primary" href="/turboframeexample">Turbo frame in other page</a>.</p>
 
-        <turbo-frame id="js-turbo-frame-other-page" aria-live="polite" src="/TurboFrameExample" loading="lazy">
+        <turbo-frame id="js-turbo-frame-other-page" aria-live="polite" src="/turboframeexample" loading="lazy">
             <Spinner />
         </turbo-frame>
     </div>
@@ -116,4 +116,11 @@
 
     [Parameter]
     public IndexFormModel? TempStoredForm { get; set; }
+
+    ////public void OnGet()
+    ////{
+    ////    this.logger.LogInformation("Hello from OnGet()");
+
+    ////    this.TempStoredForm = this.TempData.Get<IndexFormModel>(nameof(this.IndexForm));
+    ////}
 }
