Fix global message form. Add rendering of IComponent to string.

--- a/src/WebApp/Pages/GlobalMessageForm.razor
+++ b/src/WebApp/Pages/GlobalMessageForm.razor
@@ -13,8 +13,8 @@
 
         <form action="/forms/globalmessage" method="post" class="space-y-6 mt-4">
             <div>
-                <label class="block" asp-for="GlobalMessageFormModel.Message"></label>
-                <input class="mt-2" asp-for="GlobalMessageFormModel.Message" type="text">
+                <label class="block" for="message-1"></label>
+                <input class="mt-2" id="message-1" name="message" type="text" value="@this.GlobalMessageFormModel?.Message">
             </div>
 
             <div>
@@ -33,8 +33,8 @@
     ////    this.GlobalMessageFormModel = new GlobalMessageFormModel();
     ////}
 
-    ////[BindProperty]
-    ////public GlobalMessageFormModel GlobalMessageFormModel { get; set; }
+    [Parameter]
+    public GlobalMessageFormModel? GlobalMessageFormModel { get; set; }
 
     ////public void OnGet()
     ////{
